primeira versão do site 3

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laurinha Kids</title>
 </head>
 <body>
     <header>
         <nav class="menu">
           <ul>
-            <li><a href="#">Tetes</a></li>
-            <li><a href="#">Pepetas</a></li>
-            <li><a href="#">Fraldinhas</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Portfólio</a></li>
+            <li><a href="#">Contato</a></li>
           </ul>
         </nav>
         <h1 class="site-title">Laurinha Kids</h1>
-        <h2 class="site-subtitle">Mine Empreendedora</h2>
-   </header>
+        <h2 class="site-subtitle">web developer</h2>
+    </header>
 </body>
 </html>
