--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <title>Laurinha Kids</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
+* {
+    margin: 0;
+    padding: 0;
+    }
+    <body>
     <header>
         <nav class="menu">
           <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#">Tetes</a></li>
+            <li><a href="#">Pepetas</a></li>
+            <li><a href="#">Fraldinhas</a></li>
           </ul>
         </nav>
         <h1 class="site-title">Laurinha Kids</h1>
-        <h2 class="site-subtitle">web developer</h2>
+        <h2 class="site-subtitle">Mine Empreendedora</h2>
     </header>
 </body>
 </html>
