--- a/index.html
+++ b/index.html
@@ -18,5 +18,24 @@
         <h1 class="site-title">Laurinha Kids</h1>
         <h2 class="site-subtitle">Mine Empreendedora</h2>
     </header>
+         <section>
+        <h2>Portfólio</h2>
+        <figure>
+          <img class="img-portfolio" src="https://www.drogariaminasbrasil.com.br/media/product/dc4/mamadeira-cajovil-azul-240ml-1dc.jpg" alt="eCommerce">
+          <figcaption>eCommerce</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="https://alimentosaudeinfantil.files.wordpress.com/2011/01/thumbnailcake4g5e.jpg?w=584" alt=">Mobile">
+          <figcaption>Mobile</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="https://alimentosaudeinfantil.files.wordpress.com/2011/01/thumbnailcake4g5e.jpg?w=584" alt="Web design">
+          <figcaption>Web design</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS1nfaKJH3b-laD4t-ualYqwA70uXgwHLverahFdI2lB1wZ-7S3&usqp=CAU" alt="Projetos pessoais">
+          <figcaption>Projetos pessoais</figcaption>
+        </figure>
+      </section>
 </body>
 </html>
